--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <li><a>i>
+      <a href="lol.html"><li>Lolbutton</li></a>
       <li>Contacts</li>
       <li>Home</li>
       <li>Home</li>
